--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Ubuntu&display=swap")
+@import './constants'
+@import 'tailwindcss/base'
+@import 'tailwindcss/components'
+@import 'tailwindcss/utilities'
+
+body
+  background-image: $gradientColours
+  font-family: "Raleway", sans-serif
+  display: flex
+  flex-direction: column
+  text-align: center
+  margin-top: 20px
+  width: 100%
+  min-height: 100vh
+ 
